<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Restaurant App</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>

    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="sign_up_click">Or click here to sign up!</string>
    <string name="btnDirDirection">Get directions</string>
    <string name="facebook_app_id">1738385356483264</string>

    <string name="emptyCart">Cart is empty.</string>
    <string name="checkOut">Checkout!</string>

    <string name="guestInfo">Please fill the boxes</string>
    <string name="guestName">Full name</string>
    <string name="guestEmail">Email</string>
    <string name="guestPhone">Phone number</string>
    <string name="guestContinue">Continue</string>
    <string name="signupUsername">Email</string>
    <string name="signupPassword">Password</string>
    <string name="signupConfirmPassword">Confirm Password</string>
    <string name="signInUsername">Email</string>
    <string name="signInPassword">Password</string>
    <string name="signInFacebook">Sign In with Facebook</string>

    <string name="draweMenuFindWay">Directions</string>
    <string name="draweMenuSettings">Settings</string>
    <string name="draweMenuQRcode">QR code</string>
    <string name="draweMenuQrCamera">Qr Camera</string>
    <string name="draweMenuUser">User</string>
    <string name="draweMenuSignin">Sign in</string>
    <string name="draweMenuSignup">Sign up</string>
    <string name="draweMenuSignout">Sign Out</string>

    <string name="bottomMenuHome">Home</string>
    <string name="bottomMenuMenu">Our Menu</string>
    <string name="bottomMenuContact">Contact</string>

    <string name="checkoutTimepicker">Choose a Time for pickup</string>
    <string name="checkoutExtraText">If you have any special request or comments, type it in the textbox below</string>
    <string name="checkoutTotalPrice">Total price for your items: </string>
    <string name="checkoutBtnCheckout">Send Order!</string>

    <string name="menuHandler">Menu Handler</string>
    <string name="addTab">Add New Tab</string>
    <string name="updateTab">Update Tab</string>
    <string name="removeTab">Remove Tab</string>
    <string name="tabproperty_name">Name</string>
    <string name="tabproperty_position">Position</string>
    <string name="tabproperty_active">Active</string>
    <string name="drawerMenu_userProfile">Profile</string>

    <string name="profile_headline">Profile</string>
    <string name="userProfile_email">Email Address</string>
    <string name="userProfile_phoneNumber">Phone Number</string>
    <string name="userProfile_name">Name</string>
    <string name="userProfile_updateProfile">Update profile</string>

    <string name="addNewProduct">Add Product</string>
    <string name="removeProduct">Remove Product</string>
    <string name="addNewProduct_headline">New Product</string>
    <string name="addNewProduct_name">Name</string>
    <string name="addNewProduct_price">Price</string>
    <string name="addNewProduct_tab">Add to Tab</string>

    <string name="settingsLogo">Restaurant DTU</string>
    <string name="settingsUkFlagDesc">Language: English</string>
    <string name="settingsDkFlagDesc">Sprog: dansk</string>

    <string name="directionsHeader">Find restaurant</string>
    <string name="directionsDescription">Pick what type of transportation you\'ll use, and a route from your current location will be drawn on map, along with what directions to take.</string>
    <string name="directionRouteHeader">Directions</string>
    <string name="directionsCarImgDescription">Get directions for car</string>
    <string name="directionsWalkImgDescription">Get walking directions</string>
    <string name="directionsTransitImgDescription">Get directions for public transportation</string>
    <string name="directionsBikeImgDescription">Get biking directions</string>
    <string name="directionRouteDescription">The trip from %1$s to %2$s will take %3$s. The trip is %4$s.</string>

    <string name="homeWelcomeHeader">Restaurant DTU</string>
    <string name="homeWelcomeText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum enim sit amet mauris varius eleifend\n\nSed ultricies lobortis lorem, sed mattis mi. Aenean vulputate purus et accumsan gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus.\n\nUt nec mollis orci, in bibendum urna. Pellentesque et nulla et tortor laoreet hendrerit.</string>
    <string name="homeOpeningHours">Opening hours</string>
    <string name="homeOpeningHoursDesc">Mon-Thursday: 9.00-17.00\nFri- &amp; Saturday: 9.00-21.00\nSunday &amp; holidays: closed</string>
    <string name="homeNewsHeader">Latest news</string>


    <string name="contactHeader">Contact us</string>
    <string name="contactDescription">You can contact us via this form if you have any questions for us. If you\'re in doubt who to write, please choose \"General inquiries\" from the mail list.</string>
    <string name="contactWho">Department</string>
    <string name="contactResetButton">Reset</string>
    <string name="contactMailSubject">Subject</string>
    <string name="contactContentHint">Your inquiry...</string>
    <string name="contactFormalDescription">Contact information</string>


    <string name="admcontrol_closeOpen">Open or close shop</string>
    <string name="admcontrol_open">Open</string>
    <string name="admcontrol_close">Closed</string>
    <string name="admcontrol_choseDay_txt">Choose day for setting oppening hours</string>
    <string name="admcontrol_opentime">Opening time</string>
    <string name="admcontrol_closetime">Closing time</string>
    <string name="admcontrol_maintext">Set text for the Homepage</string>
    <string name="admcontrol_savebtn">Save changes</string>



    <string-array name="contactMailList">
        <item>General inquiries</item>
        <item>Technical department</item>
        <item>Accounting</item>
        <item>Management</item>
    </string-array>


    <string-array name="daysForOpeningTimes">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Weekdays</item>
        <item>Weekend</item>
    </string-array>


    <string-array name="admincontrols">
        <item>Add new menu</item>
        <item>Add new item</item>
        <item>Accounting</item>
        <item>Pending orders</item>
        <item>Order history</item>
        <item>Messages</item>
        <item>Shop settings</item>
    </string-array>
</resources>