<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contactHeader"
        android:text="@string/contactHeader"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactHeader"
        android:id="@+id/contactDescription"
        android:text="@string/contactDescription"
        android:layout_marginBottom="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactDescription"
        android:id="@+id/contactWho"
        android:text="@string/contactWho"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactDescription"
        android:layout_alignParentRight="true"
        android:layout_toLeftOf="@id/contactWho"
        android:id="@+id/contactMailListSpinner" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactWho"
        android:id="@+id/contactMailSubject"
        android:isScrollContainer="false"
        android:textSize="16sp"
        android:hint="@string/contactMailSubject" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/contactMailSubject"
        android:id="@+id/contactMailContent"
        android:gravity="start"
        android:isScrollContainer="true"
        android:textSize="16sp"
        android:hint="@string/contactContentHint"
        android:textAlignment="textStart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactMailContent"
        android:layout_toLeftOf="@+id/contactSendEmail"
        android:id="@+id/contactResetBtn"
        android:text="@string/contactResetButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactMailContent"
        android:layout_alignParentRight="true"
        android:id="@+id/contactSendEmail"
        android:text="Send email" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/contactSendEmail"
        android:id="@+id/contactSpace"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactSpace"
        android:id="@+id/contactFormal"
        android:text="@string/contactFormalDescription"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactFormal"
        android:id="@+id/contactCompanyName"
        android:text="Name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactCompanyName"
        android:id="@+id/contactCompanyAddress"
        android:text="Address" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactCompanyAddress"
        android:id="@+id/contactCompanyCountry"
        android:text="Country" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactCompanyCountry"
        android:id="@+id/contactPhone"
        android:text="Phone" />

</RelativeLayout>