<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:hint="@string/password_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        android:layout_alignBottom="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:hint="@string/email_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/login_button_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpText"
        android:layout_marginTop="48dp"
        android:onClick="onClick"
        android:clickable="true"
        android:text="@string/sign_up_click"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpText"
        android:layout_alignStart="@+id/loginButton"
        android:layout_marginBottom="29dp"
        android:id="@+id/progBar_logIn" />

</RelativeLayout>
